- Made all build.bat commands case insensitive.
- Added symbol map output in the build log file.
- Fixed command bcx's SPLIT command.
- Added CLEAN (deletes build folder) and BOSSMODE (skips running VJ at the end of the build) for build.bat.
- Added UNPACKED switch when building a ROM, which skips packing of the rb+ binary.
- Fixed plot() yet again.
- Updated Zerosquare's audio engine to version 19-Sep-2016.
- New example project imagescroller demonstrates a scrolling background.
- New function: powaeeprom(readwrite, buffer) will read from the EEPROM to the address that buffer points if readwrite is 1 and will write to the EEPROM if readwrite is 0. 
- Extended definition of raptor_highscores_hex to include user saved data (indices 31 to 127). Project scores updated to demonstrate this.
- Fix build.bat usage information text.
- Force embedding basic source code into generated C files for easier debugging.
- Fix for buildlink opening bmp files for read/write - this will fail with read only files.

v1.3 - 25 Dec 2015
- New example project blitline demonstrates using powablitlist to draw horizontal lines.
- New command powablitlist(pointer_to_blitlist). pointer_to_blitlist contains an array of ints that have a1_base,a1_flags,a1_pixel,a2_base,a2_pixel,a2_flags,b_count,b_patd,b_cmd.
- New raptor variable exposed: raptor_blitter_use controls blitter usage in raptor (internally). 0=auto, 1=force blitter, 2=blitter disable
- Added new project rotary that demonstrates rotary control with Zerosquare's player. Thanks to OMF for this.
- Buildlink will now delete the cached files in the build folder if assets.txt is newer than any single generated file. Hopefully this will take care of old or wrongly produced cached files.
- Converted all tabs to spaces in .bas files so they can be compiled under wine on linux (and other platforms). For some reason the rb+ compiler was mangling tabs. Thanks to Christos for reporting this fix!